Fix overflow
delete overflow:hidden

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -16,26 +16,27 @@ $color_s1: #D82700;
   @media screen and (max-width:$xlarge_device){
     width: 1440px;
     padding: 0 96px;
+    margin: auto;
   }
   @media screen and (max-width:$large_device){
     width: 1200px;
     padding: 0 96px;
     margin: auto;
-    overflow: hidden;
+
   }
 
   @media screen and (max-width:$medium_device){
     width: 960px;
     padding: 0 32px;
     margin: auto;
-    overflow: hidden;
+
   }
 
   @media screen and (max-width:$small_device){
     width: 320px;
     padding: 0 16px;
     margin: auto;
-    overflow: hidden;
+
   }
 
 }
